# cdtk

./: .gitignore  CMakeLists.txt  README.md
cmake/: util.cmake
include/: dynamic_library.h  types.h
src/unix/: dynamic_library.c
src/windows/: dynamic_library.c
test/: CMakeLists.txt  test.c
